force-app/main/default/objects/uSonarNews__NewsInformation__c/uSonarNews__NewsInformation__c.object-meta.xml
<CustomObject>
    <description>uSonarニュースから出力したニュース情報を格納するオブジェクト</description>
    <label>ニュース情報</label>
    <nameField>
        <displayFormat>Ni-{0000000000}</displayFormat>
        <label>レコードID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>