force-app/main/default/objects/uSonarNews__NewsInformation__c/fields/uSonarNews__CompanyAddress__c.field-meta.xml
<CustomField>
    <fullName>uSonarNews__CompanyAddress__c</fullName>
    <label>企業住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>