force-app/main/default/objects/uSonarNews__NewsInformation__c/fields/uSonarNews__CompanyListed__c.field-meta.xml
<CustomField>
    <fullName>uSonarNews__CompanyListed__c</fullName>
    <label>企業上場区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>