force-app/main/default/objects/uSonarNews__NewsInformation__c/fields/uSonarNews__CompanySalesRange__c.field-meta.xml
<CustomField>
    <fullName>uSonarNews__CompanySalesRange__c</fullName>
    <label>企業売上レンジ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>