force-app/main/default/objects/uSonarNews__NewsInformation__c/fields/uSonarNews__CompanySetupDate__c.field-meta.xml
<CustomField>
    <fullName>uSonarNews__CompanySetupDate__c</fullName>
    <label>企業設立年</label>
    <length>255</length>
    <type>Text</type>
</CustomField>