force-app/main/default/objects/uSonarNews__NewsInformation__c/fields/uSonarNews__CompanyTel__c.field-meta.xml
<CustomField>
    <fullName>uSonarNews__CompanyTel__c</fullName>
    <label>企業電話番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>