force-app/main/default/objects/uSonarNews__NewsInformation__c/fields/uSonarNews__CompanyURL__c.field-meta.xml
<CustomField>
    <fullName>uSonarNews__CompanyURL__c</fullName>
    <label>企業URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>