force-app/main/default/objects/uSonarNews__NewsInformation__c/fields/uSonarNews__LBC__c.field-meta.xml
<CustomField>
    <fullName>uSonarNews__LBC__c</fullName>
    <label>LBC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>