force-app/main/default/objects/uSonarNews__NewsInformation__c/fields/uSonarNews__NewsUrlLink__c.field-meta.xml
<CustomField>
    <fullName>uSonarNews__NewsUrlLink__c</fullName>
    <label>ニュースURL</label>
    <type>Url</type>
</CustomField>