force-app/main/default/objects/uSonarNews__NewsInformation__c/fields/uSonarNews__ReleaseDate__c.field-meta.xml
<CustomField>
    <fullName>uSonarNews__ReleaseDate__c</fullName>
    <label>公開日</label>
    <type>DateTime</type>
</CustomField>