force-app/main/default/objects/uSonarNews__NewsInformation__c/fields/uSonarNews__UniqueID__c.field-meta.xml
<CustomField>
    <fullName>uSonarNews__UniqueID__c</fullName>
    <externalId>true</externalId>
    <label>ユニークID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>